openshift-deployment/demo-app-api-gateway/referencegrant-api-gw.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: consul-reference-grant
  namespace: mesh-be-tproxy
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: consul  # Must match the namespace that api-gw/routes.yaml is deployed into
  to:
    - group: ""
      kind: Service
