openshift-deployment/demo-app-api-gateway/httproute-demo-app.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
 name: http-route-1
 namespace: consul
spec:
 parentRefs:
 - name: api-gw-demo-app
 rules:
 - matches:
   - path:
       type: PathPrefix
       value: /
   backendRefs:
   - kind: Service
     name: demo-app
     namespace: mesh-be-tproxy
     port: 5000
